fix: correct images aligning

--- a/blocks/steps/__image/_dual/steps__image_dual.css
+++ b/blocks/steps/__image/_dual/steps__image_dual.css
@@ -1,3 +1,3 @@
 .steps__image_dual {
-  max-width: calc(100% / 2 - 4px);
+  max-width: calc((100% / 2) - (7px / 2));
 }
